kube/api-php-fpm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-php-fpm
  namespace: auction
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-php-fpm
  template:
    metadata:
      labels:
        app: api-php-fpm
    spec:
      containers:
        - name: api-php-fpm
          image: ${REGISTRY}/auction-api-php-fpm:${IMAGE_TAG}
          volumeMounts:
            - name: api-jwt
              mountPath: /mnt/secrets/jwt
              readOnly: true
          ports:
            - containerPort: 9000
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - "REDIRECT_STATUS=true SCRIPT_NAME=/ping SCRIPT_FILENAME=/ping REQUEST_METHOD=GET cgi-fcgi -bind -connect 127.0.0.1:9000 || exit 1"
            initialDelaySeconds: 5
            timeoutSeconds: 5
      volumes:
        - name: api-jwt
          secret:
            secretName: api-jwt
            items:
              - key: privateKey
                path: private_key
              - key: publicKey
                path: public_key
      imagePullSecrets:
        - name: docker-registry

---
apiVersion: v1
kind: Service
metadata:
  name: api-php-fpm
  namespace: auction
spec:
  selector:
    app: api-php-fpm
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
