kube/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: auction
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: ${REGISTRY}/auction-api:${IMAGE_TAG}
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 5
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 6
            timeoutSeconds: 5
      imagePullSecrets:
        - name: docker-registry

---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: auction
spec:
  selector:
    app: api
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  namespace: auction
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - api.demo-auction.deworker.pro
      secretName: letsencrypt-api
  rules:
    - host: api.demo-auction.deworker.pro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 80
